--- a/best.html
+++ b/best.html
@@ -8,7 +8,7 @@
 <body>
 
 <div id='bestcam-badge' data-id='6239'></div>
-<script src="js/bestcam-badge.js" type="text/javascript"></script>
+<script src="http://bestcam.fabiokuhn.com/js/bestcam-badge.js" type="text/javascript"></script>
 
 </body>
 </html>
